Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,7 @@
                         <p class="item-meta it"><span>Liceo A. Manzoni (Milano)</span><span>2014 – 2019</span></p>
                         <p class="item-meta en"><span>Liceo A. Manzoni (Milan)</span><span>2014 – 2019</span></p>
                     </div>
-                    <p class="item-description"><span class="it">Gli studi durante il liceo hanno riguardato relazioni internazionali, economia, diritto, informatica e le lingue straniere come inglese, cinese e tedesco con docenti madrelingua</span><span class="en">Studies during high school covered international relations, economics, law, computer science, and foreign languages such as English, Chinese, and German with native speaker teachers</span></p>
+                    <p class="item-description"><span class="it">Gli studi durante il liceo hanno riguardato relazioni internazionali, economia, diritto, informatica e le lingue straniere come inglese, cinese e tedesco con docenti madrelingua</span><span class="en">During high school I studied international relations, economics, law, computer science, and foreign languages (English, Chinese, and German) with native-speaker teachers</span></p>
                 </div>
 
             </div>
@@ -1595,5 +1595,6 @@
     </a>
 
 </body>
+
 
 </html>
